--- a/Assets/css/hopscotch.css
+++ b/Assets/css/hopscotch.css
@@ -14,7 +14,7 @@
 .cm-s-hopscotch .CodeMirror-linenumber {color: #797379;}
 .cm-s-hopscotch .CodeMirror-cursor {border-left: 1px solid #989498 !important;}
 
-.cm-s-hopscotch span.cm-comment {color: #b33508;}
+.cm-s-hopscotch span.cm-comment {color: /*#b33508*/#00ff00;}
 .cm-s-hopscotch span.cm-atom {color: #c85e7c;}
 .cm-s-hopscotch span.cm-number {color: #c85e7c;}
 
