--- a/Assets/css/gui.css
+++ b/Assets/css/gui.css
@@ -7,7 +7,7 @@
   margin-top: 10px;
   text-align: center;
 }
-#status {
+#console {
   margin-top: 20px;
   vertical-align: bottom;
 }
@@ -43,4 +43,9 @@ span.error-message {
 }
 span.val-changed {
   color: red;
+}
+input[type=file] {
+  display:block;
+  height:0;
+  width:0;
 }
