--- a/Assets/css/gui.css
+++ b/Assets/css/gui.css
@@ -24,22 +24,42 @@ span.error-message {
   display: none;
 }
 #cpu-regs {
-  display: inline;
 }
 #cpu-regs thead td,
 #cpu-cpsr thead td,
-#cpu-inst thead td {
+#cpu-inst thead td,
+#vm-mem thead td {
   padding-bottom: 20px;
   font-weight: bold;
 }
+#n-Mode, #Mode  {
+  padding-top:20px;
+}
 #cpu-inst {
-  margin-top: 20px;
+  margin-top: 65px;
+}
+#vm-mem .cpu-reg {
+  width: 165px;
+}
+#vm-mem .cpu-reg-val {
+  width: auto;
+}
+#mem-input {
+  width: 100%;
+  height: auto;
+  padding: 0;
+  padding-left:3px;
+  margin-top:10px;
+}
+#vm-mem tbody {
+  font-family: "consolas";
+  font-size:90%;
 }
 .cpu-reg {
   width: 120px;
 }
 .cpu-reg-val {
-  width: 200px;
+  width: 110px;
 }
 #runProgramModal > div.modal-dialog {
   width:800px;
@@ -52,4 +72,33 @@ input[type=file] {
   height:0;
   width:0;
 }
+#runProgramModal div.modal-body > table td {
+ vertical-align: top;
+}
+div.tooltip-inner {
+ max-width:300px;
+}
 .cm-s-hopscotch span.cm-equ {color: #758781;}
+      #leds {
+        margin-left:10px;
+        margin-top:9px;
+       }
+      .led {
+        background: url('../img/led-off.png');
+        background-size: contain;
+        width: 15px;
+        height: 15px;
+        display: inline-block;
+      }
+      .led-on {
+        background: url('../img/led-on.png');
+        background-size: contain;
+      }
+      #devboard {
+        width:250px;
+        height:130px;
+        border:2px solid #000;
+        background: url('../img/board.png');
+        background-size: contain;
+		margin-top:25px;
+      }
