--- a/Assets/css/gui.css
+++ b/Assets/css/gui.css
@@ -118,30 +118,22 @@ div.tooltip-inner {
   width: 179px;
   height: 46px;
   background:url('../img/lcd-off.png');
-  color:black;
   font-family:LCDFont;
   font-weight:bold;
   color:#222;
   background-size: contain;
-  padding-left: 11;
-  padding-top: 5px;
   position:absolute;
   right:10px;
   bottom:8px;
+  padding-left: 9px;
+  padding-top: 7px;
 }
 #lcd.lcd-on {
   background:url('../img/lcd-on.png');
   background-size: contain;
 }
 #lcd div.lcd-cursor {
-  background-color:#2E5900;
-  padding-top: 10px;
-  padding-left: 0;
-  margin-top: 2px;
-  
- /* margin-left: 2px;*/
-  width: 9px;
-  max-width: 9px;
+  background-color:#222;
 }
 #lcd div.lcd-cursor.cursor-blink {
   animation: blink 1s steps(2, start) infinite;
@@ -156,20 +148,14 @@ div.tooltip-inner {
   }
 }
 .lcd-cell {
+  overflow: hidden;
   display: inline-block;
   width: 8px;
-  min-width: 8px;
   max-width: 8px;
   height: 15px;
-  padding: 0;
   margin-left: 2px;
-  text-align: center;
-  letter-spacing: 0;
   float: left;
-}
-#lcd-cell-0,
-#lcd-cell-16 {
-  margin-left:0;
+  line-height: 13px;
 }
 #lcd-cell-15 {
   margin-right:5px;
